@@ -1,3 +1,12 @@
+2013-11-04  Richard Frith-Macdonald <rfm@gnu.org>
+
+        * EcProcess.m:
+        * EcCommand.m:
+        * EcClientI.h:
+        * EcClientI.m:
+        * EcAlarmDestination.h:
+        Change error/alert logs to use alarm mechanism instead.
+
 2013-08-20  Richard Frith-Macdonald <rfm@gnu.org>
 
         * EcConsole.m: Ignore exception printing message on shutdown.
